append query commit

--- a/PGDis/App.config
+++ b/PGDis/App.config
@@ -5,6 +5,19 @@
   </startup>
 
   <appSettings>
+
     <add key="GdbPath" value="D:\Data\EDGES.gdb"/>
+    <add key ="GdbFeatureClassName" value="EDGES"/>
+
+    <add key ="PgHost" value="192.168.1.100"/>
+    <add key ="PgPort" value ="5432"/>
+    <add key ="PgUser" value ="postgres"/>
+    <add key ="PgPass" value="admin"/>
+    <add key ="PgDb" value="postgis_rcl"/>
+    <add key ="PgTableName" value="edges"/>
+
+    <add key ="ServerLayerUrl" value=""/>
+    <add key ="ServerName" value=""/>
+
   </appSettings>
 </configuration>
