--- a/PGDis/App.config
+++ b/PGDis/App.config
@@ -19,5 +19,8 @@
     <add key ="ServerLayerUrl" value=""/>
     <add key ="ServerName" value=""/>
 
+    <add key ="UserGdbPath" value="D:\Data\temp.gdb"/>
+    <add key="UserGdbFcName" value="temp"/>
+
   </appSettings>
 </configuration>
