--- a/PGDis/App.config
+++ b/PGDis/App.config
@@ -22,5 +22,7 @@
     <add key ="UserGdbPath" value="D:\Data\temp.gdb"/>
     <add key="UserGdbFcName" value="temp"/>
 
+    <add key="LogPath" value=""/>
+
   </appSettings>
 </configuration>
