--- a/PGDis/App.config
+++ b/PGDis/App.config
@@ -16,11 +16,15 @@
     <add key ="PgDb" value="postgis_rcl"/>
     <add key ="PgTableName" value="edges"/>
 
-    <add key ="ServerLayerUrl" value=""/>
+    <add key ="AGSServerLayerUrl" value=""/>
     <add key ="ServerName" value=""/>
 
-    <add key ="UserGdbPath" value="D:\Data\temp.gdb"/>
-    <add key="UserGdbFcName" value="temp"/>
+    <add key="WmtsServerLayerUrl" value="http://t0.tianditu.com/vec_c/wmts"/>
+
+    <!--<add key ="UserGdbPath" value="D:\Data\temp.gdb"/>
+    <add key="UserGdbFcName" value="temp"/>-->
+    <add key ="UserGdbPath" value=""/>
+    <add key="UserGdbFcName" value=""/>
 
     <add key="LogPath" value=""/>
 
