--- a/PGDis/App.config
+++ b/PGDis/App.config
@@ -16,17 +16,30 @@
     <add key ="PgDb" value="postgis_rcl"/>
     <add key ="PgTableName" value="edges"/>
 
+    <add key ="PgHostAlone" value="192.168.1.100"/>
+    <add key ="PgPortAlone" value ="5432"/>
+    <add key ="PgUserAlone" value ="postgres"/>
+    <add key ="PgPassAlone" value="admin"/>
+    <add key ="PgDbAlone" value="postgis_rcl"/>
+    <add key ="PgTableNameAlone" value="edges"/>
+
     <add key ="AGSServerLayerUrl" value=""/>
     <add key ="ServerName" value=""/>
 
-    <add key="WmtsServerLayerUrl" value="http://t0.tianditu.com/vec_c/wmts"/>
+    <add key="WmtsServerLayerUrl" value=""/>
+    <!--<add key="WmtsServerLayerUrl" value="http://t0.tianditu.com/vec_c/wmts"/>-->
 
-    <!--<add key ="UserGdbPath" value="D:\Data\temp.gdb"/>
-    <add key="UserGdbFcName" value="temp"/>-->
-    <add key ="UserGdbPath" value=""/>
-    <add key="UserGdbFcName" value=""/>
+    <add key ="UserGdbPath" value="D:\Data\temp.gdb"/>
+    <add key="UserGdbFcName" value="temp"/>
+    <!--<add key ="UserGdbPath" value=""/>
+    <add key="UserGdbFcName" value=""/>-->
 
     <add key="LogPath" value=""/>
+
+    <add key="DgvName1" value="功能"/>
+    <add key="DgvName2" value="集群"/>
+    <add key="DgvName3" value="单机"/>
+    <add key="DgvName4" value="ArcGIS"/>
 
   </appSettings>
 </configuration>
